# pure-io

./: project.lkshw  pure-io.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Main_.hs
