name:                pure-io
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pure-io#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Main_
  build-depends:       base >= 4.7 && < 5
                     , MissingH
                     , vector
                     , bytestring
                     , utf8-string
                     , base64-bytestring
  default-language:    Haskell2010

executable pure-io-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pure-io
                     , MissingH
                     , vector
                     , bytestring
                     , utf8-string
                     , base64-bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pure-io
